# cgspline

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  imgui.ini
.github/workflows/: build.yml
assets/bezier/: longwave  teacup  teaspoon
assets/scenes/: Teaset01.dl  Teaset02.dl  Test104.dl  Test128.dl  Test152.dl  Test32.dl  Test56.dl  Test80.dl  base.dl  scene_gen.jl  teaset.dl  teaset.scn  test.dl  test02.dl  test03.dl
assets/surfaces/: ball0.se  cube16.se  dice16.se  quad16.se  tube.se
assets/textures/: LICENSE.txt
doc/: extended-grammar.adoc
src/: AlignedTypes.h  ArrayAdaptor.h  BezierPatches.cpp  BezierPatches.h  BezierSurface.h  ColorMap.h  Framebuffer.cpp  Framebuffer.h  GLBezierSurface.cpp  GLBezierSurface.h  GLStorage.h  GLSurface.cpp  GLSurface.h  Log.cpp  Log.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow_UI.cpp  PBRMaterial.h  PatchBVH.cpp  PatchBVH.h  RayTracer.cpp  RayTracer.h  Ref.h  SceneReaderExt.cpp  SceneReaderExt.h  SplRenderer.cpp  SplRenderer.h  Spline.cpp  Spline.cu  Spline.h  SplineMat.h  Spline_BezierClipping.cpp  Spline_BezierClipping.cu  Spline_Subdivision.cpp  Spline_Subdivision.cu  Surface.cpp  Surface.h  SurfacePipeline.cpp  (+3 more)
src/reader/: DescriptionLanguage.cpp  DescriptionLanguage.h  Parser.cpp  Parser.h  SceneReader.cpp  SceneReader.h
src/rt/: BVH.cpp  BVH.h  CPURayTracer.cpp  CPURayTracer.h  CUDAUtility.cpp  CUDAUtility.h  Frame.h  Intersection.h  PBR.cu  PBR.h  PerfectHashFunction.cu  PerfectHashFunction.h  PerfectHashTable.cu  PerfectHashTable.h  Primitive.cpp  Primitive.cu  Primitive.h  RTNamespace.h  RayTracer.cu  RayTracer.h  Scene.cu  Scene.h  ScopeClock.h  SoA.cpp  SoA.h  StaticConfig.h
